Version 2.3.2
------------------------------------------------------------------

13 March 2007
+ Found template typo that broke IE login.
+ Updated file: templates/user_main.tpl

7 March 2007
+ Removed fake French translation.
+ Ordered permissions alphabetically (FR #1665183).

5 March 2007
+ Changed control panel icon
+ Added error check to login.
+ isUser will now always return false if passed a zero id.
+ Added new function requireLogin that forwards a user to the login
  screen


Version 2.3.1
-------------------------------------------------------------------
23 February 2007
+ Added ability for user to choose their preferred editor.
+ Updated files: templates/my_page/user_setting.tpl


Version 2.3.0
-------------------------------------------------------------------
22 February 2007
+ Removed redundant translate functions.
+ Removed addStyle call from my_page.php (Bug #1665576)
+ Removed unneeded content variable.

13 February 2007
+ Added translate function calls in classes and my_page.php
+ my_page hides translation option if language defines disable selection
+ Raised core dependency.

12 January 2007
+ Added a unrestricted only parameter to Current_User's allow and
  authorize functions

10 January 2007
+ Dropped references from some constructors
+ Added error check to setPermissions function: won't accept empty
  group id
+ tidied (lower cased constants)
+ Changed id default to zero.

9 January 2006
+ Removed unneeded function parameter on getGroups

Version 2.2.2
-------------------------------------------------------------------
8 December 2006
+ Fixed typo causing branch installation failure on Postgresql

7 December 2006
+ Set username to the same character size in both users table and
  user_authorization.


Version 2.2.1
-------------------------------------------------------------------
1 December 2006
+ Fixed a bug causing conflicts between user and group permissions.


Version 2.2.0